sort.basic.selection.AlgSelectionSort.scala.code
def selectionSort() {
  var lgr=getNombreValeurs
  var indice=1
  
  var min=0
  var posMin=0
  var posAvant=0
  
  while (indice!=lgr){
    min=getValeur(indice-1)
    posMin=indice
    for (i<- (indice+1) to lgr-1){
      if (plusPetitQue(indice+1,min)){
        posAvant=posmin
        posMin=indice+1
        min=getValeur(indice-1)
      }
    }
    echange(posAvant,posMin)
    indice+=1
  }
}